added centralized functions for save and edit and for sorting and filtering as well

--- a/allifmaalcommonapp/templates/allifmaalcommonapp/banks/add-bank.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/banks/add-bank.html
@@ -103,6 +103,11 @@
                 <td>{{form.balance}}</td>
             
                 </tr>
+                 <tr>
+                <td class="allif-fix-table-col">Status</td>
+                <td>{{form.status}}</td>
+            
+                </tr>
           </tbody>
           </table>
           </div>
@@ -193,6 +198,11 @@
             <td>{{form.balance}}</td>
         
             </tr>
+             <tr>
+                <td class="allif-fix-table-col">Status</td>
+                <td>{{form.status}}</td>
+            
+                </tr>
           </tbody>
           </table>
           </div>
