--- a/allifmaalcommonapp/templates/allifmaalcommonapp/expenses/add-expense.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/expenses/add-expense.html
@@ -69,7 +69,11 @@
           
               </tr>
              
+          <tr>
+              <td class="allif-fix-table-col">Expense Name</td>
+              <td>{{form.name}}</td>
           
+              </tr>
         </tbody>
         </table>
       </div>
@@ -94,7 +98,11 @@
                     <td>{{form.description}}</td>
                 
                     </tr>
-                  
+                   <tr>
+                        <td class="allif-fix-table-col">Quantity</td>
+                        <td>{{form.quantity}}</td>
+                    
+                        </tr>   
                      
                       <tr>
                         <td class="allif-fix-table-col">Amount</td>
@@ -211,6 +219,11 @@
             <tr>
               <td class="allif-fix-table-col">Comments</td>
               <td>{{form.comments}}</td>
+          
+              </tr>
+              <tr>
+              <td class="allif-fix-table-col">Expense Name</td>
+              <td>{{form.name}}</td>
           
               </tr>
           </tbody>
