--- a/allifmaalcommonapp/templates/allifmaalcommonapp/hrm/profiles/add-staff-profile.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/hrm/profiles/add-staff-profile.html
@@ -84,7 +84,7 @@
               </tr>
               <tr>
                 <td class="allif-fix-table-col">Staff No.</td>
-                <td>{{form.staffNo}}</td>
+                <td>{{form.number}}</td>
             
                 </tr>
         </tbody>
@@ -125,6 +125,16 @@
                       <td>{{form.education}}</td>
                   
                       </tr>
+                       <tr>
+                      <td class="allif-fix-table-col">Operation Year</td>
+                      <td>{{form.operation_year}}</td>
+                  
+                      </tr>
+                       <tr>
+                      <td class="allif-fix-table-col">Operation Term</td>
+                      <td>{{form.operation_term}}</td>
+                  
+                      </tr>
                      
           </tbody>
           </table>
@@ -140,7 +150,7 @@
         <tbody>
           <tr>
             <td class="allif-fix-table-col">Comments</td>
-            <td>{{form.comment}}</td>
+            <td>{{form.comments}}</td>
         
             </tr>
             <tr>
