--- a/allifmaalshaafiapp/templates/allifmaalshaafiapp/triage/add_triage_data.html
+++ b/allifmaalshaafiapp/templates/allifmaalshaafiapp/triage/add_triage_data.html
@@ -41,7 +41,7 @@
       
       <tr>
         <td class="allif-fix-table-col-forms">Systolic</td>
-        <td>{{form.blood_pressure_diastolic}}</td>
+        <td>{{form.blood_pressure_systolic}}</td>
     
         </tr>
       
@@ -276,7 +276,7 @@
   </div>
       </div>
       <!--END.... END of single pages content and its links section-->
-    </div>
+    
 </div>
   {% block scripts %}
   {% endblock %}
