--- a/allifmaalshaafiapp/templates/allifmaalshaafiapp/triage/triage_data.html
+++ b/allifmaalshaafiapp/templates/allifmaalshaafiapp/triage/triage_data.html
@@ -7,245 +7,94 @@
 {%endblock%}
 {% block body %}
 <div class="allifmaal-main-container">
+  <div class="allif-header-main-wrapper">
 <!--start....main headere-->
-<div class="card-header">
-
-  <div class="row mt-12" ><!--start....header row-->
+  {% include 'allifmaalcommonapp/includes/headers/search-form-header-upper-section.html' %}
+  <form method='POST' action="{% url 'allifmaalshaafiapp:prescriptionSearch' user_var glblslug %}">{% csrf_token %}  
+  {% include 'allifmaalcommonapp/includes/headers/search-form-header-lower-section.html' %}
+  <li><a class="dropdown-item">Advanced Searching</a></li>
+  <form method='POST' action="{% url 'allifmaalshaafiapp:prescriptionAdvancedSearch' user_var glblslug %}" enctype="multipart/form-data">{% csrf_token %}
+  {% include 'allifmaalcommonapp/includes/headers/advanced-search-form-lower-section.html' %}
   
-  <div class="col-md-12"><!--start....header column-->
-  
-  <div class="container-fluid amel-content-header">
-    <div class="dropdown allifmaal-content-dropdown">
-      <a class="dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
-      Open Filters
-      </a>  
-      <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-        <div class="content-dropdown-menu">
-          
-        <li><a class="dropdown-item">Looking for something?</a></li>
-        <a class="dropdown-item" href="{% url 'allifmaalshaafiapp:prescriptions' user_var glblslug %}">Clear Search</a>
-          
-        <form method='POST' action="{% url 'allifmaalshaafiapp:prescriptionSearch' user_var glblslug %}">{% csrf_token %}
-        
-          <input type="text" id="allifsearchcommonfield" name="allifsearchcommonfieldname" class="form-control allifsearchcommonfieldclasstwo"
-          placeholder="Type Here ...">
-        
-          <button type="submit" class="btn allifmaal-submit-btn">Submit</button>
-          </form>
-          <hr>
-          <li><a class="dropdown-item">Select Ordering Option</a></li>
-        <form method='POST' action="{% url 'allifmaalshaafiapp:prescriptions' user_var glblslug %}" enctype="multipart/form-data">{% csrf_token %}
-      
-        <div>
-        <select name="requiredformat" class="form-control">
-          {% for item in datasorts %}
-          <option>{{item.name}}</option>
-            
-           {% endfor %}
-           
-          </select>
-          </div>
-          <button type="submit" class="btn allifmaal-submit-btn">Submit</button>
-      
-      </form>
-      <hr>
-      <li><a class="dropdown-item">Advanced Searching</a></li>
-      <form method='POST' action="{% url 'allifmaalshaafiapp:prescriptionAdvancedSearch' user_var glblslug %}" enctype="multipart/form-data">{% csrf_token %}
-        
-        <div>
-          <label>Start Date</label>
-          <input type="date" class="form-control" name="startdate" placeholder="Starting Balance">
-        </div>
-        <div>
-          <label>End Date</label>
-          <input type="date" class="form-control" name="enddate" placeholder="Ending Balance">
-        </div>
-
-        <div>
-          <label>Start Value</label>
-          <input type="text" class="form-control" name="startvalue" placeholder="">
-        </div>
-        <div>
-          <label>End Value</label>
-          <input type="text" class="form-control" name="endvalue" placeholder="">
-        </div>
-        
-        
-        <div>
-          <label >Select Option</label>
-          <select name="requiredformat" class="form-control">
-            {% for item in formats %}
-            <option>{{item.name}}</option>
-            
-         {% endfor %}
-         
-        </select>
-        </div>
-  
-        
-        <button type="submit" class="btn allifmaal-submit-btn">Submit</button>
-    
-    </form>
-    <hr>
-      
-      </div>
-      </ul>
-    </div>
-    <a class="amel-table-list-identifier">Prescriptions:</a>
-   
-    <a href="{% url 'allifmaalshaafiapp:shaafiHome' user_var glblslug %}">Home</a>
-   <a href="{% url 'allifmaalcommonapp:commonTransactions' user_var glblslug %}">Transactions</a>
-<a href="{% url 'allifmaalshaafiapp:allTriageData' user_var glblslug %}">View All</a>
-   
-   
+  <a href="{% url 'allifmaalcommonapp:commonTransactions' user_var glblslug %}">Transactions</a>
+    <a href="{% url 'allifmaalshaafiapp:triageData' user_var glblslug %}">Triage</a>
+  <a href="{% url 'allifmaalshaafiapp:allTriageData' user_var glblslug %}">View All</a>
+   {% include 'allifmaalcommonapp/includes/headers/header-lower-section.html' %}
   </div>
-  
-      </div><!--end....header column-->
-    
-    </div><!--end....header row-->
-  
-  </div><!--end....main headere-->
-<div class="allifmaincontainer">
-<div class="row mt-12"> <!--start....table row-->
-<div class="col-md-12"> <!--start....table column-->
-    
-  
-  <div class="allif-scroll-table">
-    <div class="table-responsive allif-full-table">
-    <table class="table table-layout">
-      <thead>
-        <tr class="allif-table-header-row">
-        <td class="allif-fix-table-col">Patient</td>
-        <td>Reference No.</td>
-        <td>Blood Pressure</td>
-        <td>Temperature D.C</td>
-        <td>Recorded On</td>
-        <td>Recorded By</td>
-       
-        <td>Navigate</td>
-        
-        <td> . . . </td>
-        <td></td>
-        </tr>
-        </thead>
-        <tbody class="allif-table-body">
-         
-        
-        {% for item in allifqueryset %} 
-        <tr data-id="{{item.id}}">
-        <td class="allif-fix-table-col"><a class="allif-table-links" href="{% url 'allifmaalcommonapp:commonCustomerDetails' item.medical_file.customer.id user_var glblslug %}">{{item.medical_file.customer}}</a></td>
-       
-            <td>
-              <a class="allif-table-links" href="{% url 'allifmaalcommonapp:commonAddTransactionDetails' item.medical_file.id user_var glblslug %}">{{item.medical_file.number}}</a>
-           
-          </td>
-          
-           
-          <td>
-            <a class="allif-table-links" href="{% url 'allifmaalshaafiapp:triageDataDetails' item.id user_var glblslug %}"> {{item.blood_pressure_systolic}}/{{item.blood_pressure_diastolic}}</a>
-           
-          </td>
-            <td>
-            {{item.temperature}}
-          </td>
-          <td>
-            {{item.date|date:'d/m/Y'}}
-          </td>
-          <td>
-            {{item.owner}}
-          </td>
-         
-         <td>
-          <div class="dropdown allifmaal-content-dropdown">
-            <a href="#" onclick="showDropdown(event, this)" class="dropdown-toggle dropdown-item" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">Options</a>
-            <div class="dropdown-content">
-              <a href="{% url 'allifmaalshaafiapp:editTriageData' item.id user_var glblslug %}" class="dropdown-item" id="allif-table-drop-item-link">Edit Item</a>
-             <a href="{% url 'allifmaalshaafiapp:AddTriageData' item.medical_file.id user_var glblslug %}" class="dropdown-item" id="allif-table-drop-item-link">Add Triage</a>
-             
-              
-              <a href="#" onclick="confirmDelete(this)" class="dropdown-item" id="allif-table-drop-item-link-delete">Delete Item</a>
-              
-            </div>
-          </div>
-          <div class="dropdown allif-confirm-action">
+    <div class="allifmaincontainer">
+      <div class="allif-full-table-content-main-wrapper">
+      {% include 'allifmaalcommonapp/includes/tables/full-table-header-upper-section.html' %}
             
-            <a href="{% url 'allifmaalshaafiapp:prescriptions' user_var glblslug %}" id="allif-table-drop-item-link">No</a><span><strong> | </strong></span>
-            <a href="{% url 'allifmaalshaafiapp:deleteTriageData' item.id user_var glblslug %}" id="allif-confirm-delete">Confirm</a>
-          </div>
-
-         
+        <td class="allif-fix-table-col">Patient</td>
+        <td class="allif-table-header-td">Reference No.</td>
+        <td class="allif-table-header-td">Blood Pressure</td>
+        <td class="allif-table-header-td">Temperature D.C</td>
+        <td class="allif-table-header-td">Recorded On</td>
+        <td class="allif-table-header-td">Status</td>
+        <td class="allif-table-header-td">Navigate</td>
+        {% include 'allifmaalcommonapp/includes/tables/full-table-header-lower-section.html' %}
+        
+      {% for item in allifqueryset %}  
+        <tr data-id="{{item.id}}" class="allif-table-header-content-row">
+        <td class="allif-fix-table-col"><a class="allif-table-links" href="{% url 'allifmaalcommonapp:commonCustomerDetails' item.medical_file.customer.id user_var glblslug %}">{{item.medical_file.customer}}</a></td>
+        <td class="allif-table-content-td">
+        <a class="allif-table-links" href="{% url 'allifmaalcommonapp:commonAddTransactionDetails' item.medical_file.id user_var glblslug %}">{{item.medical_file.number}}</a></td>
+        <td class="allif-table-content-td"><a class="allif-table-links" href="{% url 'allifmaalshaafiapp:triageDataDetails' item.id user_var glblslug %}"> {{item.blood_pressure_systolic}}/{{item.blood_pressure_diastolic}}</a></td>
+        <td class="allif-table-content-td">{{item.temperature}}</td>
+        <td class="allif-table-content-td">{{item.date|date:'d/m/Y'}}</td>
+        <td class="allif-table-content-td">{{item.status}}</td>
+        
+        <td class="allif-table-content-td">
+        {% include 'allifmaalcommonapp/includes/tables/full-table-dropdown-upper-section.html' %}
+   
+        <a href="{% url 'allifmaalshaafiapp:editTriageData' item.id user_var glblslug %}" class="dropdown-item" id="allif-table-drop-item-link">Edit Item</a>
+        <a href="{% url 'allifmaalshaafiapp:AddTriageData' item.medical_file.id user_var glblslug %}" class="dropdown-item" id="allif-table-drop-item-link">Add Triage</a>
+        
+        {% include 'allifmaalcommonapp/includes/tables/full-table-dropdown-middle-section.html' %}
+        
+        <a href="{% url 'allifmaalshaafiapp:prescriptions' user_var glblslug %}" id="allif-table-drop-item-link">No</a><span><strong> | </strong></span>
+        <a href="{% url 'allifmaalshaafiapp:deleteTriageData' item.id user_var glblslug %}" id="allif-confirm-delete">Confirm</a>
+        
+        {% include 'allifmaalcommonapp/includes/tables/full-table-lower-section.html' %}
         </td>
-       <td> . . . </td>
-       <td></td>
-      
   
     </tr>
-    {% endfor %}
-    {% if searched_data %}
-    {% for item in searched_data %}
-    <tr data-id="{{item.id}}">
-      <td class="allif-fix-table-col"><a class="allif-table-links" href="{% url 'allifmaalcommonapp:commonAddQuoteDetails' item.id user_var glblslug %}">{{item.number}}</a></td>
-     
-          <td>
-          {{item.customer}}
+      {% endfor %}
+      {% if searched_data %}
+      {% for item in searched_data %}
+     <tr data-id="{{item.id}}" class="allif-table-header-content-row">
+        <td class="allif-fix-table-col"><a class="allif-table-links" href="{% url 'allifmaalcommonapp:commonCustomerDetails' item.medical_file.customer.id user_var glblslug %}">{{item.medical_file.customer}}</a></td>
+        <td class="allif-table-content-td">
+        <a class="allif-table-links" href="{% url 'allifmaalcommonapp:commonAddTransactionDetails' item.medical_file.id user_var glblslug %}">{{item.medical_file.number}}</a>
         </td>
-        <td>
-          <a href="{% url 'allifmaalcommonapp:commonAddQuoteItems' item.id user_var glblslug %}" class="body-delete-link">{{item.total|floatformat:2|intcomma}}</a>
+        <td class="allif-table-content-td"><a class="allif-table-links" href="{% url 'allifmaalshaafiapp:triageDataDetails' item.id user_var glblslug %}"> {{item.blood_pressure_systolic}}/{{item.blood_pressure_diastolic}}</a></td>
+        <td class="allif-table-content-td">{{item.temperature}}</td>
+        <td class="allif-table-content-td">{{item.date|date:'d/m/Y'}}</td>
+        <td class="allif-table-content-td">{{item.owner}}</td>
+        
+        <td class="allif-table-content-td">
+        {% include 'allifmaalcommonapp/includes/tables/full-table-dropdown-upper-section.html' %}
+   
+        <a href="{% url 'allifmaalshaafiapp:editTriageData' item.id user_var glblslug %}" class="dropdown-item" id="allif-table-drop-item-link">Edit Item</a>
+        <a href="{% url 'allifmaalshaafiapp:AddTriageData' item.medical_file.id user_var glblslug %}" class="dropdown-item" id="allif-table-drop-item-link">Add Triage</a>
+        
+        {% include 'allifmaalcommonapp/includes/tables/full-table-dropdown-middle-section.html' %}
+        
+        <a href="{% url 'allifmaalshaafiapp:prescriptions' user_var glblslug %}" id="allif-table-drop-item-link">No</a><span><strong> | </strong></span>
+        <a href="{% url 'allifmaalshaafiapp:deleteTriageData' item.id user_var glblslug %}" id="allif-confirm-delete">Confirm</a>
+        
+        {% include 'allifmaalcommonapp/includes/tables/full-table-lower-section.html' %}
         </td>
-        <td>
-          {{item.prospect}}
-        </td>
-      
-        <td>
-          {{item.date|date:'d/m/Y'}}
-        </td>
-        <td>
-          {{item.owner}}
-        </td>
-  
-       <td>
-        <div class="dropdown allifmaal-content-dropdown">
-          <a href="#" onclick="showDropdown(event, this)" class="dropdown-toggle dropdown-item" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">Options</a>
-          <div class="dropdown-content">
-            <a href="{% url 'allifmaalcommonapp:commonAddQuoteDetails' item.id user_var glblslug %}" class="dropdown-item" id="allif-table-drop-item-link">Edit Item</a>
-            <a href="{% url 'allifmaalcommonapp:commonQuoteToPdf' item.id user_var glblslug %}" class="dropdown-item" id="allif-table-drop-item-link">Download</a>
-            
-            
-            <a href="#" onclick="confirmDelete(this)" class="dropdown-item" id="allif-table-drop-item-link-delete">Delete Item</a>
-            
-          </div>
-        </div>
-        <div class="dropdown allif-confirm-action">
-          
-          <a href="{% url 'allifmaalcommonapp:commonQuotes' user_var glblslug %}" id="allif-table-drop-item-link">No</a><span><strong> | </strong></span>
-          <a href="{% url 'allifmaalcommonapp:commonDeleteQuote' item.id user_var glblslug %}" id="allif-confirm-delete">Confirm</a>
-        </div>
-
-       
-      </td>
-     <td> . . . </td>
-     <td></td>
-    
-
-  </tr>
+    </tr>
     {% endfor %}
       {%endif %}
+    {% include 'allifmaalcommonapp/includes/tables/full-table-last-section.html' %}
 
-      </tbody>
-    </table>
     </div>
-   </div>
-
-
-  
-  </div><!--end....table column-->
-  </div>
-
 </div><!--end of main container of the page....-->
 </div>
   {% block scripts %}
- 
-  {% endblock %}
   
+  {% endblock %}
    {% endblock %}
    
