improved on functins

--- a/allifmaalcommonapp/templates/allifmaalcommonapp/error/error.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/error/error.html
@@ -31,7 +31,9 @@
         <p>Sorry, an error occurred, please correct it and try again.</p>
         <p>{{error_message}}</p>
         <a href="{% url 'allifmaalusersapp:userLogoutPage' %}" class="loginlink">Login Again</a>
+        <a href="javascript:history.back()">Go back </a>
         </div>
+        
         </div>
 
 <!--end of table-->
