--- a/allifmaalcommonapp/templates/allifmaalcommonapp/currencies/currency-details.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/currencies/currency-details.html
@@ -17,6 +17,25 @@
 </div>
   <div class="allifmaincontainer">
 
+  <div class="allif-details-table-main-wrapper">
+  <!--... START OF TABLE.... -->
+   {% include 'allifmaalcommonapp/includes/details/two-column-details-table-upper-section.html' %}
+      <tr>
+        <td class="allif-fix-table-col">Name</td>
+        <td>{{allifquery.name}}</td>
+      </tr>
+      
+    {% include 'allifmaalcommonapp/includes/details/two-column-details-table-middle-section.html' %}
+
+     <tr>
+        <td class="allif-fix-table-col">Description</td>
+        <td>{{allifquery.description}}</td>
+      </tr>
+        
+    {% include 'allifmaalcommonapp/includes/details/two-column-details-table-lower-section.html' %}
+     <!--... END OF TABLE.... -->
+      </div>
+
   <div class="allif-form-main-wrapper">
     <form method='POST' action=''>{% csrf_token %}
     <!--START.... start of single pages content and its links section-->
@@ -40,7 +59,6 @@
         </tr>
         {% include 'allifmaalcommonapp/includes/forms/two-column-forms-table-column-two-last-section.html' %}
     </div>
-
   </div>
        <!--END... End of show/hide table more details section one..ok...hree....-->
  <!--START.. Start of show/hide table section one-->
@@ -90,6 +108,101 @@
         </div>
          </form>
   </div>
+
+  <div class="allif-content-spacer"></div>
+  
+  <!--... START OF COLLAPSIBLE SECTIONS.... -->
+  <div class="allif-collapsible-sections-main-wrapper">
+<!--START......... Start of collapsible sectioon links..........-->
+  {% include 'allifmaalcommonapp/includes/links/collapse-links.html' %}
+    
+  <!--start....content of first dropdown/collapsible section-->
+  <div class="collapse allif-collapsible-details-section-wrapper" id="allif-collapsible-core-details">
+  
+    <div class="allif-details-table-main-wrapper">
+     <!--... START OF TABLE.... -->
+   {% include 'allifmaalcommonapp/includes/details/two-column-details-table-upper-section.html' %}
+      <tr>
+        <td class="allif-fix-table-col">Comments</td>
+        <td>{{allifquery.comments}}</td>
+      </tr>
+    {% include 'allifmaalcommonapp/includes/details/two-column-details-table-middle-section.html' %}
+      <tr>
+        <td class="allif-fix-table-col">Balance</td>
+        <td>{{allifquery.balance}}</td>
+      </tr>
+    {% include 'allifmaalcommonapp/includes/details/two-column-details-table-lower-section.html' %}
+       <!--... END OF TABLE.... -->
+      </div> 
+      </div>
+    <!--end....content of first dropdown/collapsible section-->
+
+    <!--start....content of second dropdown/collapsible section-->
+    <div class="collapse allif-collapsible-details-section-wrapper" id="allif-collapsible-standard-details">
+     <!--... START OF TABLE.... -->
+    <div class="allif-details-table-main-wrapper">
+   {% include 'allifmaalcommonapp/includes/details/two-column-details-table-upper-section.html' %}
+      <tr>
+        <td class="allif-fix-table-col">Quantity</td>
+        <td>{{allifquery.quantity}}</td>
+      </tr>
+    {% include 'allifmaalcommonapp/includes/details/two-column-details-table-middle-section.html' %}
+      <tr>
+        <td class="allif-fix-table-col">Date</td>
+        <td>{{allifquery.date}}</td>
+      </tr>
+    {% include 'allifmaalcommonapp/includes/details/two-column-details-table-lower-section.html' %}
+       <!--... END OF TABLE.... -->
+       </div>
+    </div>
+    
+       <!--end....content of second dropdown/collapsible section-->
+
+    <!--start....content of second dropdown/collapsible section-->
+    <div class="collapse allif-collapsible-details-section-wrapper" id="allif-collapsible-general-details">
+      <div class="allif-details-table-main-wrapper">
+    {% include 'allifmaalcommonapp/includes/details/standard-base-details.html' %}
+    </div>
+    </div>
+       <!--end....content of second dropdown/collapsible section-->
+    
+        <!--start....content of second dropdown/collapsible section-->
+    <div class="collapse allif-collapsible-details-section-wrapper" id="allif-collapsible-static-details">
+      <div class="allif-details-table-main-wrapper">
+    {% include 'allifmaalcommonapp/includes/details/general-base-details.html' %}
+    </div>
+    </div>
+
+    <div class="collapse allif-collapsible-details-section-wrapper" id="allif-collapsible-sensitive-details">
+      <div class="allif-details-table-main-wrapper">
+        
+  
+  <!--... START OF TABLE.... -->
+   {% include 'allifmaalcommonapp/includes/details/two-column-details-table-upper-section.html' %}
+      <tr>
+        <td class="allif-fix-table-col">Edit {{allifquery}}</td>
+        <td><a class="amel-table-list-identifier" href="{% url 'allifmaalcommonapp:commonEditCurrency' allifquery.id user_var glblslug %}">Edit {{allifquery}}</a></td>
+      </tr>
+      
+    {% include 'allifmaalcommonapp/includes/details/two-column-details-table-middle-section.html' %}
+
+     <tr>
+        <td class="allif-fix-table-col">Delet {{allifquery}}</td>
+        <td><a class="amel-table-list-identifier body-delete-link" href="{% url 'allifmaalcommonapp:commonWantToDeleteCurrency' allifquery.id user_var glblslug %}">Delete {{allifquery}}</a></td>
+      </tr>
+        
+    {% include 'allifmaalcommonapp/includes/details/two-column-details-table-lower-section.html' %}
+     <!--... END OF TABLE.... -->
+     
+
+    </div>
+    </div>
+
+
+       <!--end....content of second dropdown/collapsible section-->
+       </div>
+    <!--... END OF COLLAPSIBLE SECTIONS.... -->
+ 
       </div>
       <!--END.... END of single pages content and its links section-->
     </div>
