--- a/allifmaalcommonapp/templates/allifmaalcommonapp/includes/details/general-base-details.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/includes/details/general-base-details.html
@@ -1,3 +1,4 @@
+{% if user == 'super_admin' %}
 <div class="row mt-12"> <!--start....table row-->
   <div class="col-md-12"> <!--start....table column-->
   <div class="allif-scroll-table">
@@ -99,3 +100,4 @@
 <!--end of table-->
 
 </div><!--end of main container of the page............-->
+{% endif %}
