--- a/allifmaalcommonapp/templates/allifmaalcommonapp/includes/links/collapse-links.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/includes/links/collapse-links.html
@@ -3,8 +3,15 @@
     <a class="dropdown-toggle allif-collapsible-details-section-links" type="button" data-bs-toggle="collapse" data-bs-target="#allif-collapsible-core-details" aria-expanded="false" aria-controls="allif-collapsible-core-details">Show Core Details</a>
     <a class="dropdown-toggle allif-collapsible-details-section-links" type="button" data-bs-toggle="collapse" data-bs-target="#allif-collapsible-standard-details" aria-expanded="false" aria-controls="allif-collapsible-standard-details">Show Standard Details</a>
     <a class="dropdown-toggle allif-collapsible-details-section-links" type="button" data-bs-toggle="collapse" data-bs-target="#allif-collapsible-general-details" aria-expanded="false" aria-controls="allif-collapsible-general-details">Show General Details</a>
+
+    {% if user == 'super_admin' %}
     <a class="dropdown-toggle allif-collapsible-details-section-links" type="button" data-bs-toggle="collapse" data-bs-target="#allif-collapsible-static-details" aria-expanded="false" aria-controls="allif-collapsible-static-details">Show Static Details</a>
 
+    {% endif %}
 
+   {% if allifquery %}
+    <a class="dropdown-toggle allif-collapsible-details-section-links" style="color: red;" type="button" data-bs-toggle="collapse" data-bs-target="#allif-collapsible-sensitive-details" aria-expanded="false" aria-controls="allif-collapsible-sensitive-details">Sensitive Section</a>
+{% endif %}
+ 
   </div>
  
