done function inheritances

--- a/allifmaalcommonapp/templates/allifmaalcommonapp/currencies/currencies.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/currencies/currencies.html
@@ -23,22 +23,6 @@
   
     <div class="allifmaincontainer">
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
       <div class="allif-full-table-content-main-wrapper">
       {% include 'allifmaalcommonapp/includes/tables/full-table-header-upper-section.html' %}
         <td class="allif-fix-table-col">Currency</td>
@@ -64,7 +48,7 @@
         
         <td class="allif-table-content-td">{{item.date|date:'d/m/Y'}}</td>
         <td class="allif-table-content-td">{{item.status}}</td>
-
+<td class="allif-table-content-td">{{item.balance}}</td>
         <td class="allif-table-content-td">
         {% include 'allifmaalcommonapp/includes/tables/full-table-dropdown-upper-section.html' %}
    
