--- a/allifmaalcommonapp/templates/allifmaalcommonapp/expenses/expenses.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/expenses/expenses.html
@@ -7,19 +7,6 @@
 {%endblock%}
 {% block body %}
 
-
-  <style>
-   
-    #sortable-table td {
-     
-      cursor: pointer;
-    }
-
-  </style>
-
-
-
-
 <div class="allifmaal-main-container">
 <!--start....main headere-->
 <div class="card-header">
@@ -51,7 +38,7 @@
        {% include 'allifmaalcommonapp/includes/forms/sorting/allif-sorting-form.html' %}
       <hr>
       <li><a class="dropdown-item">Advanced Searching</a></li>
-      <form method='POST' action="" enctype="multipart/form-data">{% csrf_token %}
+      <form method='POST' action="{% url 'allifmaalcommonapp:commonExpenseAdvancedSearch' user_var glblslug %}" enctype="multipart/form-data">{% csrf_token %}
         
         <div>
           <label>Start Date</label>
@@ -111,6 +98,8 @@
     </div><!--end....header row-->
   
   </div><!--end....main headere-->
+
+  
 <div class="allifmaincontainer">
 <div class="row mt-12"> <!--start....table row-->
    
