--- a/allifmaalcommonapp/templates/allifmaalcommonapp/currencies/currency-advanced-search-pdf.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/currencies/currency-advanced-search-pdf.html
@@ -15,18 +15,18 @@
     <table class="allif-pdf-table-body">
 
     <tr>
-    <th colspan="2">PO</th>
-    <th colspan="5">Supplier</th>
-    <th colspan="3">Amount</th>
-    <th colspan="2">Date</th>
+    <th colspan="3">Currency</th>
+    <th colspan="3">Description</th>
+    <th colspan="3">Comments</th>
+    <th colspan="3">Date</th>
     </tr>
    
     <tbody>
     {% for item in searched_data %}
     <tr>
-    <td colspan="2">{{item.name}}</td>
-    <td colspan="5">{{item.supplier}}</td>
-    <td colspan="2"> {{item.amount|floatformat:2|intcomma}}</td>
+    <td colspan="3">{{item.name}}</td>
+    <td colspan="3">{{item.description}}</td>
+    <td colspan="3"> {{item.comments}}</td>
     <td colspan="3">{{item.date|date:'d/m/Y'}}</td>
     
     </tr>
