--- a/allifmaalcommonapp/templates/allifmaalcommonapp/currencies/delete-currency-confirm.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/currencies/delete-currency-confirm.html
@@ -6,178 +6,16 @@
 {% block style %}
 {%endblock%}
 {% block body %}
-<div class="allifmaal-main-container">
- 
-<!--start....main headere-->
-<div class="card-header">
-
-<div class="row mt-12" ><!--start....header row-->
-
-<div class="col-md-12"><!--start....header column-->
-
-<div class="container-fluid amel-content-header">
-  <a href="{% url 'allifmaalcommonapp:commonHome' user_var glblslug %}">Home</a>
-<a href="{% url 'allifmaalcommonapp:commonSpaces' user_var glblslug %}">Spaces</a>
-</div>
-
-    </div><!--end....header column-->
-  
-  </div><!--end....header row-->
-
-</div><!--end....main headere-->
-
-  <div class="allifmaincontainer">
-
-<div class="row mt-12"> <!--start....table row-->
-  <div class="delete-confirmation-header">Do you want to delete {{allifquery}}?</div>
-  <div class="col-md-12"> <!--start....table column-->
-  <div class="allif-scroll-table">
-    <div class="allif-info-tables">
-      <div class="row"><!--start of row div --->
-  <!--start of column two-->
-  <div class="col-md-4">
-    
-      <!--start of the table here-->
-      <div class="table-responsive">
-      <table class="table table-layout">
-      <tbody>
+    {% include 'allifmaalcommonapp/includes/delete/delete-confirm-upper-section.html' %}
       <tr>
-        <td class="allif-fix-table-col">Warehouse</td>
-        <td>{{allifquery.name}}</td>
-    
-        </tr>
-       
-        
-        </tbody>
-        </table>
-      </div>
-        </div>
-           
-    
-     <!--start of column two-->
-     <div class="col-md-4">
-       <!--start of the table here-->
-       <div class="allif-details-card table-responsive">
-       <table class="table table-layout">
-        <tbody>
-          <tr>
-            <td class="allif-fix-table-col">Department</td>
-            <td>{{allifquery.department}}</td>
-        
-            </tr>
-          
-        
-          </tbody>
-          </table>
-          </div>
-          </div>
-    
-
-     <!--start of column two-->
-     <div class="col-md-4">
-      <div class="allif-details-card table-responsive">
-       <!--start of the table here-->
-       <table class="table table-layout">
-        <tbody>
-          <tr>
-            <td class="allif-fix-table-col">Date</td>
-            <td>{{allifquery.date}}</td>
-        
-            </tr>
-          
-          </tbody>
-          </table>
-  </div>
-    </div>
-    </div><!--end of row div --->
-      
-        </div>
-
-</div><!--end....table row-->
-</div>
-<!--end of table-->
-
-</div><!--end of main container of the page....-->
-
-<div class="row mt-12"> <!--start....table row-->
-  
-  <div class="col-md-12"> <!--start....table column-->
-  <div class="allif-scroll-table">
-    <div class="allif-info-tables">
-      <div class="row"><!--start of row div --->
-  <!--start of column two-->
-  <div class="col-md-4">
-    
-      <!--start of the table here-->
-      <div class="table-responsive">
-      <table class="table table-layout">
-      <tbody>
-    <tr>
-        <td>
-        <div class="delete-options-container">
-          <a href="{% url 'allifmaalcommonapp:commonCurrencies' user_var glblslug %}">Back</a>
-        </div>
-        </td>
+        <td class="allif-fix-table-col">Edit {{allifquery}}</td>
+        <td><a class="amel-table-list-identifier" href="{% url 'allifmaalcommonapp:commonCurrencies' user_var glblslug %}">No, Dont Delete {{allifquery}}</a></td>
       </tr>
-       
-        </tbody>
-        </table>
-      </div>
-        </div>
-           
-    
-     <!--start of column two-->
-     <div class="col-md-4">
-       <!--start of the table here-->
-       <div class="allif-details-card table-responsive">
-       <table class="table table-layout">
-        <tbody>
-          <tr>
-            <td>
-            <div class="delete-options-container">
-              <a href="{% url 'allifmaalcommonapp:commonCurrencies' user_var glblslug %}">No</a>
-            </div>
-            </td>
-          </tr>
-           
-         
-          </tbody>
-          </table>
-          </div>
-          </div>
-    
-    
-     <!--start of column two-->
-     <div class="col-md-4">
-      <div class="allif-details-card table-responsive">
-       <!--start of the table here-->
-       <table class="table table-layout">
-        <tbody>
-          <tr>
-            <td>
-            <div class="delete-options-container">
-              <a href="{% url 'allifmaalcommonapp:commonDeleteCurrency' allifquery.id user_var glblslug %}" class="body-delete-link">Yes</a></li>
-            </div>
-            </td>
-          </tr>
-          </tbody>
-          </table>
-  </div>
-    </div>
-    </div><!--end of row div --->
-      
-        </div>
-
-</div><!--end....table row-->
-</div>
-<!--end of table-->
-
-</div><!--end of main container of the page....-->
-
-</div>
-</div>
-  {% block scripts %}
-
+     <tr>
+        <td class="allif-fix-table-col">Delet {{allifquery}}</td>
+        <td><a class="amel-table-list-identifier body-delete-link" href="{% url 'allifmaalcommonapp:commonDeleteCurrency' allifquery.id user_var glblslug %}"> Yes, Delete {{allifquery}}</a></td>
+      </tr>
+    {% include 'allifmaalcommonapp/includes/delete/delete-confirm-lower-section.html' %}
+{% block scripts %}
   {% endblock %}
    {% endblock %}
-   
